# BirdNET-Tiny-Forge-Korvo2-template

./: NOTICE  README.md  sdkconfig.defaults
.devcontainer/idf_v5_1_2/: devcontainer.json
docker/: Dockerfile
main/: CMakeLists.txt  audio_preprocessor_int8_model_data.h.jinja  audio_provider.cc  audio_provider.cc.jinja  audio_provider.h  feature_provider.cc  feature_provider.h  idf_component.yml  main.cc  main_functions.cc.jinja  micro_features_generator.cc  micro_features_generator.h  micro_model_settings.h.jinja  model.cc.jinja  sd_card.cc  sd_card.h
